<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   	android:fillViewport="true"
   >
    
  <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:background="@drawable/bg">
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dip" >

     <!-- Email Label -->

     <TextView
         android:id="@+id/email_reg_label"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/email"
         android:textColor="#372c24" />

     <EditText
         android:id="@+id/email_txt"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dip"
         android:layout_marginTop="5dip"
         android:hint="@string/em_eg"
         android:inputType="textEmailAddress" />

     <!-- Password Label -->

     <TextView
         android:id="@+id/pass_reg_label"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/password"
         android:textColor="#372c24" />

     <EditText
         android:id="@+id/password_txt"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dip"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:singleLine="true" />

     <!-- Login button -->

     <Button
         android:id="@+id/bt_login"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dip"
         android:text="@string/login" />
     <!-- Link to Registration Screen -->

     <TextView
         android:id="@+id/link_to_register"
         android:layout_width="match_parent"
         android:layout_height="0dip"
         android:layout_marginBottom="40dip"
         android:layout_marginTop="40dip"
         android:layout_weight="0.01"
         android:gravity="center"
         android:text="@string/linkToRegister"
         android:textAlignment="gravity"
         android:textColor="#0b84aa"
         android:textSize="20sp" />

      </LinearLayout>

        <!-- Login Form Ends -->
 
  </RelativeLayout>
</ScrollView>