<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/login_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/homename"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="24dp"
        android:contentDescription="@string/login"
        android:src="@drawable/login"
        android:background="@color/black" />

    <ImageButton
        android:id="@+id/register_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/login_bt"
        android:layout_marginRight="62dp"
        android:contentDescription="@string/register"
        android:src="@drawable/register"
        android:background="@color/black" />

    <TextView
        android:id="@+id/homedesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_bt"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="89dp"
        android:gravity="center"
        android:text="@string/text_desc"
        android:textAlignment="gravity"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/homename"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:text="@string/welcome"
        android:textAlignment="gravity"
        android:textColor="@color/title_color"
        android:textSize="20sp" />

</RelativeLayout>