<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true"
  >
  <RelativeLayout
        android:layout_width="fill_parent"
        android:background="@drawable/bg"
        android:layout_height="wrap_content" >
 
        
        <!-- Registration Form -->
        <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip">
          
          <!-- Full Name Label -->

          <TextView
              android:id="@+id/fullname_label"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/full_name"
              android:textColor="#372c24" />

          <EditText 
                android:id="@+id/reg_fullname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:layout_marginBottom="20dip"
                android:hint="@string/full_name"
                android:inputType="text"/>
          
          <!--  Email Label -->

          <TextView
              android:id="@+id/email_reg_label"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/email"
              android:textColor="#372c24" />
          
          <EditText 
                android:inputType="textEmailAddress"
                android:hint="@string/em_eg"
                android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:layout_marginBottom="20dip"/>
          
          <!-- Password Label -->

          <TextView
              android:id="@+id/pass_reg_label"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/password"
              android:textColor="#372c24" />
          
          <EditText
                android:hint="@string/password"
                android:inputType="textPassword" 
                android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"/>
          
          <!-- Register Button -->
          <Button 
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/register"/>
          
          <!-- Link to Login Screen -->
          <TextView 
                android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="@string/linkToLogin"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="20sp"
                android:textColor="#025f7c"/>
 
        </LinearLayout>
        <!-- Registration Form Ends -->
  </RelativeLayout>
</ScrollView>